# fast-a11y-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic.py
src/fast_a11y/: __init__.py  accessible_name.py  rule_engine.py  rule_meta.py  tree.py  types.py
src/fast_a11y/rules/: __init__.py  aria.py  color_contrast.py  forms.py  landmarks.py  language.py  media.py  navigation.py  structure.py  tables.py  text_alternatives.py
tests/: test_color_contrast.py  test_exhaustive.py  test_smoke.py
