[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-a11y-py"
version = "0.1.0"
description = "Fast, zero-DOM accessibility checker with axe-core compatible output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Probeo", email = "eng@probeo.io" }]
keywords = ["accessibility", "a11y", "wcag", "axe-core", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/probeo-io/fast-a11y-py"
Repository = "https://github.com/probeo-io/fast-a11y-py"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_a11y"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
